--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,7 @@ h6 {
     font-family: 'Kaushan Script'!important;
     margin: auto !important;
     color: #fff !important;
-    text-shadow: 2px 1px 2px #000;
+    text-shadow: 2px 1px 5px #000;
 }
 
 #navigation a:active{
@@ -51,6 +51,7 @@ h6 {
     padding: 128px 0;
     background: url('../../sources/images/mockup.jpg') no-repeat center center fixed;
     background-size: cover;
+    filter: contrast(90%);
     /* height: 400px auto; */
     
     position: relative;
@@ -58,16 +59,18 @@ h6 {
     padding-bottom: 10%;
 
     margin-top: -20px;
-    text-shadow: 2px 1px 2px #000;
+    text-shadow: 2px 1px 5px #000;
     
     color: #fff;    
 
     text-align: center;
-    font-size: 1.8rem;
+    
 }
 
 #accueil h1 {
   padding-top: 5rem;
+  backdrop-filter: blur(4px);
+  font-size: 5.2rem;
 }
 
 #moi {
@@ -104,18 +107,19 @@ h6 {
 
     margin: 0px auto;
     padding-right: 2rem;
-    text-shadow: 2px 1px 2px #000;
+    text-shadow: 2px 1px 5px #000;
 }
 
 .text{
     margin: 2rem;
-    font-size: 1.2rem;
-    background: rgba(55,55,55,0.6);
+    font-size: 1.4rem;
+    background: rgba(55,55,55,0.7);
 }
 
 #presentation h2{
     text-align: center;
     font-size: 4rem;
+    backdrop-filter: blur(4px)
 }
 
 .container{
@@ -144,19 +148,20 @@ h6 {
     right: 0;
     border: 1px outset rgba(255, 255, 255, 0);  
     color: white;
-    text-shadow: 2px 1px 2px #000; 
+    text-shadow: 2px 1px 5px #000; 
 }
 
 #competences h2{
     text-align: center;
     font-size: 4rem;
     margin-bottom: 4rem;
+    backdrop-filter: blur(4px)
 }
 
 #competences .progress
 {
     height: 100%;
-    height: 50px;
+    height: 70px;
     margin: 30px 20px;
     background: #ddd;
     display: flex;    
@@ -171,7 +176,7 @@ h6 {
 #competences .progress h5
 {
     text-shadow: 1px 1px 1px #000;
-    font-size: 13px;
+    font-size: 18px;
 }
 
 #mes_competences{
@@ -180,11 +185,11 @@ h6 {
 }
 
 #conteneur_competences1{
-    width: 500px;
+    width: 700px;
 }
 
 #conteneur_competences2{
-    width: 500px;
+    width: 700px;
 }
 
 /* Timeline pour les experiences professionnelles et la formation */
@@ -197,7 +202,7 @@ h6 {
     right: 0;
     border: 1px outset rgba(255, 255, 255, 0);  
     color: white;
-    text-shadow: 2px 1px 2px #000; 
+    text-shadow: 2px 1px 5px #000; 
     margin: 0px auto;
     padding-top: 5%;
     padding-bottom: 10%;
@@ -207,6 +212,7 @@ h6 {
   text-align: center;
   font-size: 4rem;
   margin-bottom: 4rem;
+  backdrop-filter: blur(4px)
 }
 
 .timeline h4{
@@ -391,7 +397,8 @@ h6 {
   text-align: center;
   font-size: 4rem;
   margin-bottom: 4rem;
-  text-shadow: 2px 1px 2px #000;  
+  text-shadow: 2px 1px 5px #000;
+  backdrop-filter: blur(4px)  
 }
 /* CREATION CARD */
 .card {
@@ -417,7 +424,7 @@ h6 {
   overflow: hidden;/*3*/
 }
 .card-image img {
-  width: 150%;/*4*/
+  width: 110%;/*4*/
     /*5 - Méthode de centrage en fonction de la taille de l'image */
   position: absolute;
   top: 50%;
@@ -477,7 +484,8 @@ h6 {
   text-align: center;
   font-size: 4rem;
   margin-bottom: 4rem;
-  text-shadow: 2px 1px 2px #000;
+  text-shadow: 2px 1px 5px #000;
+  backdrop-filter: blur(4px)
 }
 
 /* body {
@@ -496,13 +504,13 @@ body section {
   width: 80%;
   max-width: 1100px;
 } */
-body section h1 {
+/* body section h1 {
   margin-bottom: 40px;
   font-size: 4em;
   text-transform: uppercase;
   font-family: "Lato", sans-serif;
   font-weight: 100;
-}
+} */
 
 form {
   width: 58.3333333333%;
@@ -630,15 +638,37 @@ form input[type="submit"]:focus {
   background: #cd6302;
 }
 
+.alert {
+  padding: 20px;
+  background-color: rgb(142, 128, 129);
+  color: white;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
+
+/* FOOTER */
 footer {
   background-color: rgb(142, 128, 129) !important;
   color: #fff;
-  height: 80px;
+  height: 150px;
   font-family: 'Kaushan Script'!important;
   margin: auto !important;
   color: #fff !important;
   text-shadow: 2px 1px 2px #000;
   text-align: center;
   font-size: 25px;
-  padding-top: 1rem;
+  padding-top: 1.1rem;
 }
